Fix float on mobile. Bump to v0.1.3

--- a/sass/grid-mixins.scss
+++ b/sass/grid-mixins.scss
@@ -7,6 +7,7 @@
   }
   .#{$name}-#{$breakpoint}-#{$width}#{$suffix} {
     @extend %col;
+    float: left;
     width: percentage($width / $columns);
   }
 
