--- a/sass/grid.scss
+++ b/sass/grid.scss
@@ -38,7 +38,6 @@
 // -------
 %col {
   position: relative;
-  float: left;
   min-height: 1px;
   padding-left: ($grid-gutter / 2);
   padding-right: ($grid-gutter / 2);
